# cmm26_intro_to_rl

./: .gitignore  CONTEXT.md  L6-0_demo_gridworld_dp.ipynb  L6-1_demo_crawler_q-learning.ipynb  L6-2_demo_crawler_pg.ipynb  L6-3a_demo_crawler_sac_vs_ppo.ipynb  L6-3b_demo_crawler_reward_shaping.ipynb  L6-3c_demo_crawler_action_spaces.ipynb  L6-3d_demo_crawler_domain_rand.ipynb  L7-1_demo_crawler_2D_PPO.ipynb  README.md  _archived_demo_policy_gradient.ipynb  demo_crawler_pg.ipynb  demo_crawler_rl.ipynb  demo_gridworld_dp.ipynb  l6_3_utils.py  lecture1_script.md  pyproject.toml  teleop_crawler.py  wishlist.md  yh_self-learn.md
.claude/: settings.local.json
.ipynb_checkpoints/: L6-0_demo_gridworld_dp-checkpoint.ipynb  L6-1_demo_crawler_q-learning-checkpoint.ipynb  L6-2_demo_crawler_pg-checkpoint.ipynb
envs/: __init__.py  crawler2d.py
saved_checkpoints/: actor_critic_7_actor_critic.pt  actor_critic_7_actor_critic_0_600.pt  actor_critic_7_actor_critic_1_600.pt  actor_critic_7_actor_critic_2_600.pt  actor_critic_7_actor_critic_3_600.pt  actor_critic_7_actor_critic_4_600.pt  actor_critic_7_actor_critic_5_600.pt  actor_critic_7_actor_critic_6_600.pt  actor_critic_7_actor_critic_7_600.pt  actor_critic_7_actor_critic_8_600.pt  actor_critic_7_actor_critic_9_600.pt  dqn_3A_no_replay_4_4_64_False_False.pt  dqn_3A_no_target_4_4_64_False_False.pt  dqn_3_dqn_4_actions_4_4_64_False_False.pt  dqn_4_11_bins_4_121_64_False_False.pt  dqn_4_3_bins_4_9_64_False_False.pt  dqn_4_7_bins_4_49_64_False_False.pt  humanoid_ppo_L7-1_humanoid_ppo_Humanoid-v5_n_envs4_steps100000_0_metrics.pt  (+68 more)
(+7 files in other folders)
