[project]
name = "rl-lectures"
version = "0.1.0"
description = "Notebook environment for the 2026 CMM reinforcement learning lectures."
requires-python = ">=3.10,<3.12"
dependencies = [
  "numpy==2.2.6",
  "matplotlib==3.10.8",
  "pillow==12.1.1",
  "ipython==8.38.0",
  "ipykernel==7.2.0",
  "notebook==7.5.5",
  "jupyterlab==4.5.6",
  "ipywidgets==8.1.8",
  "imageio==2.37.0",
  "mujoco==3.6.0",
  "gymnasium==1.2.3",
  "torch==2.11.0",
  "stable-baselines3==2.7.1",
]

[tool.uv]
package = false
